fix #12 updated readme

--- a/OleFileIO_PL/README.html
+++ b/OleFileIO_PL/README.html
@@ -14,7 +14,9 @@
 </ul>
 <h2 id="news">News</h2>
 <ul>
+<li>2013-05-27 v0.25: improved metadata extraction, properties parsing and exception handling, fixed <a href="https://bitbucket.org/decalage/olefileio_pl/issue/12/error-when-converting-timestamps-in-ole">issue #12</a></li>
 <li>2013-05-07 v0.24: new features to extract metadata (get_metadata method and OleMetadata class), improved getproperties to convert timestamps to Python datetime</li>
+<li>2012-10-09: published <a href="http://www.decalage.info/python/oletools">python-oletools</a>, a package of analysis tools based on OleFileIO_PL</li>
 <li>2012-09-11 v0.23: added support for file-like objects, fixed <a href="https://bitbucket.org/decalage/olefileio_pl/issue/8/bug-with-file-object">issue #8</a></li>
 <li>2012-02-17 v0.22: fixed issues #7 (bug in getproperties) and #2 (added close method)</li>
 <li>2011-10-20: code hosted on bitbucket to ease contributions and bug tracking</li>
