--- a/OleFileIO_PL/README.html
+++ b/OleFileIO_PL/README.html
@@ -9,11 +9,12 @@
 <li>Support for files larger than 6.8MB</li>
 <li>Robust: many checks to detect malformed files</li>
 <li>Improved API</li>
-<li>New features: metadata extraction</li>
+<li>New features: metadata extraction, stream/storage timestamps</li>
 <li>Added setup.py and install.bat to ease installation</li>
 </ul>
 <h2 id="news">News</h2>
 <ul>
+<li>2013-07-24 v0.26: added methods to parse stream/storage timestamps, improved listdir to include storages</li>
 <li>2013-05-27 v0.25: improved metadata extraction, properties parsing and exception handling, fixed <a href="https://bitbucket.org/decalage/olefileio_pl/issue/12/error-when-converting-timestamps-in-ole">issue #12</a></li>
 <li>2013-05-07 v0.24: new features to extract metadata (get_metadata method and OleMetadata class), improved getproperties to convert timestamps to Python datetime</li>
 <li>2012-10-09: published <a href="http://www.decalage.info/python/oletools">python-oletools</a>, a package of analysis tools based on OleFileIO_PL</li>
