--- a/OleFileIO_PL/README.html
+++ b/OleFileIO_PL/README.html
@@ -109,8 +109,9 @@
 </ol>
 <p>Both are case-insensitive.</p>
 <p>Switching between the two is easy:</p>
-<pre><code>slash_path = &#39;/&#39;.join(list_path)
-list_path  = slash_path.split(&#39;/&#39;)</code></pre>
+<pre><code>:::python
+    slash_path = &#39;/&#39;.join(list_path)
+    list_path  = slash_path.split(&#39;/&#39;)</code></pre>
 <h3 id="get-the-list-of-streams">Get the list of streams</h3>
 <p>listdir() returns a list of all the streams contained in the OLE file, including those stored in storages. Each stream is listed itself as a list, as described above.</p>
 <pre><code>:::python
@@ -140,15 +141,19 @@ list_path  = slash_path.split(&#39;/&#39;)</code></pre>
 <h3 id="get-information-about-a-streamstorage">Get information about a stream/storage</h3>
 <p>Several methods can provide the size, type and timestamps of a given stream/storage:</p>
 <p>get_size(path) returns the size of a stream in bytes:</p>
-<pre><code>s = ole.get_size(&#39;WordDocument&#39;)</code></pre>
+<pre><code>:::python
+    s = ole.get_size(&#39;WordDocument&#39;)</code></pre>
 <p>get_type(path) returns the type of a stream/storage, as one of the following constants: STGTY_STREAM for a stream, STGTY_STORAGE for a storage, STGTY_ROOT for the root entry, and False for a non existing path.</p>
-<pre><code>t = ole.get_type(&#39;WordDocument&#39;)</code></pre>
+<pre><code>:::python
+    t = ole.get_type(&#39;WordDocument&#39;)</code></pre>
 <p>get_ctime(path) and get_mtime(path) return the creation and modification timestamps of a stream/storage, as a Python datetime object with UTC timezone. Please note that these timestamps are only present if the application that created the OLE file explicitly stored them, which is rarely the case. When not present, these methods return None.</p>
-<pre><code>c = ole.get_ctime(&#39;WordDocument&#39;)
-m = ole.get_mtime(&#39;WordDocument&#39;)</code></pre>
+<pre><code>:::python
+    c = ole.get_ctime(&#39;WordDocument&#39;)
+    m = ole.get_mtime(&#39;WordDocument&#39;)</code></pre>
 <h3 id="extract-metadata">Extract metadata</h3>
 <p>get_metadata() will check if standard property streams exist, parse all the properties they contain, and return an OleMetadata object with the found properties as attributes (new in v0.24).</p>
-<pre><code>    meta = ole.get_metadata()
+<pre><code>:::python
+    meta = ole.get_metadata()
     print(&#39;Author:&#39;, meta.author)
     print(&#39;Title:&#39;, meta.title)
     print(&#39;Creation date:&#39;, meta.create_time)
@@ -166,12 +171,15 @@ version, dig_sig, content_type, content_status, language, doc_version</code></pr
 <p>See the source code of the OleMetadata class for more information.</p>
 <h3 id="parse-a-property-stream">Parse a property stream</h3>
 <p>get_properties(path) can be used to parse any property stream that is not handled by get_metadata. It returns a dictionary indexed by integers. Each integer is the index of the property, pointing to its value. For example in the standard property stream '05SummaryInformation', the document title is property #2, and the subject is #3.</p>
-<pre><code>p = ole.getproperties(&#39;specialprops&#39;)</code></pre>
+<pre><code>:::python
+    p = ole.getproperties(&#39;specialprops&#39;)</code></pre>
 <p>By default as in the original PIL version, timestamp properties are converted into a number of seconds since Jan 1,1601. With the option convert_time, you can obtain more convenient Python datetime objects (UTC timezone). If some time properties should not be converted (such as total editing time in '05SummaryInformation'), the list of indexes can be passed as no_conversion (new in v0.25):</p>
-<pre><code>p = ole.getproperties(&#39;specialprops&#39;, convert_time=True, no_conversion=[10])</code></pre>
+<pre><code>:::python
+    p = ole.getproperties(&#39;specialprops&#39;, convert_time=True, no_conversion=[10])</code></pre>
 <h3 id="close-the-ole-file">Close the OLE file</h3>
 <p>Unless your application is a simple script that terminates after processing an OLE file, do not forget to close each OleFileIO object after parsing to close the file on disk. (new in v0.22)</p>
-<pre><code>    ole.close()</code></pre>
+<pre><code>:::python
+    ole.close()</code></pre>
 <h3 id="use-olefileio_pl-as-a-script">Use OleFileIO_PL as a script</h3>
 <p>OleFileIO_PL can also be used as a script from the command-line to display the structure of an OLE file and its metadata, for example:</p>
 <pre><code>OleFileIO_PL.py myfile.doc</code></pre>
