updated readme for v0.46

--- a/README.html
+++ b/README.html
@@ -23,7 +23,7 @@
 <h2 id="news">News</h2>
 <p>Follow all updates and news on Twitter: <a href="https://twitter.com/decalage2" class="uri">https://twitter.com/decalage2</a></p>
 <ul>
-<li><strong>2018-09-09 v0.46</strong>: OleFileIO can now be used as a context manager (with...as), to close the file automatically (see <a href="https://olefile.readthedocs.io/en/latest/Howto.html#open-an-ole-file-from-disk">doc</a>. Improved handling of malformed files, fixed several bugs.</li>
+<li><strong>2018-09-09 v0.46</strong>: OleFileIO can now be used as a context manager (with...as), to close the file automatically (see <a href="https://olefile.readthedocs.io/en/latest/Howto.html#open-an-ole-file-from-disk">doc</a>). Improved handling of malformed files, fixed several bugs.</li>
 <li>2018-01-24 v0.45: olefile can now overwrite streams of any size, improved handling of malformed files, fixed several <a href="https://github.com/decalage2/olefile/milestone/4?closed=1">bugs</a>, end of support for Python 2.6 and 3.3.</li>
 <li>2017-01-06 v0.44: several bugfixes, removed support for Python 2.5 (olefile2), added support for incomplete streams and incorrect directory entries (to read malformed documents), added getclsid, improved <a href="http://olefile.readthedocs.io/en/latest">documentation</a> with API reference.</li>
 <li>2017-01-04: moved the documentation to <a href="http://olefile.readthedocs.io/en/latest">ReadTheDocs</a></li>
